# ubus-server

./: Makefile  README.md
src/: CMakeLists.txt  Makefile  ubus-client.c  ubus-server.c
